# FP-lab-1

./: README.md  dune-project  fp_lab_1.opam
.github/workflows/: main.yml
src/: dune  main.ml  test1.ml  test2.ml  testing.ml
src/lib/: dune  samples.ml
src/lib/problem1/: common.ml  solution1.ml  solution2.ml  solution3.ml  solution5.ml  solution6.ml  solution7.py
src/lib/problem2/: solution3.ml  solution5.ml  solution6.ml
src/problem1/: solution1.ml  solution3.ml  solution4.ml  solution6.ml
src/problem2/: common.ml  solution1.ml  solution2.ml  solution4.ml  solution6.ml  solution7.py
